# rs-spy

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  app.py  docker-compose.yml  pyproject.toml
algo-spec/: 01-data-requirements.md  02-indicators-and-calculations.md  03-market-bias-engine.md  04-stock-selection-engine.md  05-long-bias-algo.md  06-short-bias-algo.md  07-risk-management.md  08-backtesting-and-validation.md  README.md
config/: backtest_default.yaml  reference_overrides.yaml  sectors_500.yaml  universe.yaml  universe_500.yaml
documents/: A-New-Measure-of-Relative-Strength.md  A-Simple-Strategy.md  Classic-Example-of-Relative-Strength-(RS).md  Does-this-Method-Work-for-Crypto,-Forex,-etc...etc....md  Don’t-Overthink-This-–-The-Pattern-Is-Clear.md  Great-Resource-for-Learning-Relative-Strength-Relative-Weakness.md  How-To-Read-The-Market---An-Exercise.md  How-To-Tell-If-This-Breakout-Is-Real-or-Fake.md  How-to-Monitor-Relative-Strength-vs-SPY.md  If-We-All-Trade-RS-RW-Will-the-Edge-Disappear?.md  Keeping-it-Really-Simple.md  Simple-and-Effective-Day-Trading-Method---But-Rarely-Mentioned-or-Used.md  The-Great-Imbalance-And-How-To-Fix-It.md  Trading-SPY-QQQ---Should-You-Do-It?.md  Understanding-and-Figuring-Out-Relative-Strength.md  What-It-Means-To-Have-An-Edge.md  What-are-Institutional-Traders.md  overall-market-analysis.md  predictive-engine.md
scripts/: aggregate_campaign.py  audit_gate_pass_rates.py  backfill_daily.py  backfill_intraday.py  build_universe_500.py  enrich_sectors.py  nightly_scan_cron.sh  run_backtest_d1.py  (+10 more)
(+147 files in other folders)
