[project]
name = "rs-spy"
version = "0.1.0"
description = "Intraday RS/RW algo + backtesting engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "alpaca-py>=0.33",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "testcontainers[postgres]>=4.0",
]
universe = [
    "yfinance>=0.2",
]
ui = [
    "streamlit>=1.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that need a real Postgres (auto-skip when Docker is unavailable)",
]

[tool.ruff]
line-length = 100
